Commenting out height limitation to try and fix excessive white space on mobile devices

--- a/src/style/desktopStyles.scss
+++ b/src/style/desktopStyles.scss
@@ -10,7 +10,7 @@ body {
 }
 
 .root-container {
-  height: 100vh;
+  //height: 100vh;
   padding: 80px;
 
   .landing-container {
